Revert "fixed bug with sidemenu (z-index)"
This reverts commit cf6728de363c6703ddb0e11b5cf35da14cebd49e.

--- a/style.css
+++ b/style.css
@@ -139,7 +139,6 @@ body {
   background-color: #fff;
   transform: translateX(100%);
   transition: 300ms all ease-in;
-  z-index: 100;
 }
 
 .header-side-nav.open {
@@ -246,7 +245,6 @@ body {
 
 .testimonials-container {
   display: flex;
-  transform: translateX(0%);
 }
 
 .testimonial-item {
@@ -266,10 +264,11 @@ body {
 }
 
 .testimonials-controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.6rem;
+  position: absolute;
+  bottom: 0;
+}
+
+.testimonials-btn {
 }
 
 .indicators {
